# projeto-finops-multicloud-microservico

./: .gitignore  finops-dash-key.pem
finops-micro/backend/: .env.example  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
finops-micro/backend/src/finops_api/: main.py
finops-micro/backend/src/finops_api/core/: config.py  logging.py
finops-micro/backend/src/finops_api/db/: __init__.py  base.py  session.py
finops-micro/backend/src/finops_api/jobs/: ingest_cli.py
finops-micro/backend/src/finops_api/models/: __init__.py  auth_email_verification_token.py  auth_session.py  auth_user.py  dim_currency_rate.py  dim_region.py  dim_scope.py  dim_service.py  dim_tenant.py  fact_cost_daily.py  fact_ingest_audit.py  ingest_job.py
finops-micro/backend/src/finops_api/providers/: __init__.py  registry.py
finops-micro/backend/src/finops_api/repositories/: __init__.py  currency_rate_repo.py  dims_repo.py  fact_cost_repo.py
finops-micro/backend/src/finops_api/schemas/: __init__.py  auth.py  common.py  filters.py  finops.py  summary.py  timeseries.py
finops-micro/backend/src/finops_api/services/: __init__.py  analytics_insight_service.py  analytics_service.py  auth_service.py  auto_ingest_service.py  cost_explorer_insight_service.py  cost_explorer_service.py  email_service.py  (+5 more)
finops-micro/backend/tests/: test_auth_service.py  test_aws_cli_client.py  test_currency_rate_sync_service.py  test_fact_cost_repo.py  test_health.py  test_ingest_service.py  test_multi_tenant_repo.py  test_oci_cli_client.py  test_tenant_service.py
(+205 files in other folders)
